pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-06-16T14:48:27Z"
  generateName: identity-api-backend-557b7fb446-
  labels:
    app.kubernetes.io/instance: identity-api
    app.kubernetes.io/name: backend
    pod-template-hash: 557b7fb446
  name: identity-api-backend-557b7fb446-8jkbl
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: identity-api-backend-557b7fb446
    uid: e3508ddc-5b51-4ad1-95aa-6eca0421e752
  resourceVersion: "20327"
  uid: 20529b69-7d17-4e2f-9e3d-8bcc3d1c130b
spec:
  containers:
  - env:
    - name: ASPNETCORE_ENVIRONMENT
      value: Staging
    image: ghcr.io/abdosaad203/identity-api:sha-aba488a
    imagePullPolicy: Always
    name: backend
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /app/logs
      name: logs
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nzzcc
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: ip-10-0-12-13.ec2.internal
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: logs
    persistentVolumeClaim:
      claimName: identity-api-backend-pvc
  - configMap:
      defaultMode: 420
      name: db-init-sql
    name: init-sql
  - name: kube-api-access-nzzcc
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-06-16T14:48:29Z"
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-06-16T14:48:27Z"
    message: 'containers with incomplete status: [db-migrate]'
    reason: ContainersNotInitialized
    status: "False"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-06-16T14:48:27Z"
    message: 'containers with unready status: [backend]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-06-16T14:48:27Z"
    message: 'containers with unready status: [backend]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-06-16T14:48:27Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: ghcr.io/abdosaad203/identity-api:sha-aba488a
    imageID: ""
    lastState: {}
    name: backend
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
    volumeMounts:
    - mountPath: /app/logs
      name: logs
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nzzcc
      readOnly: true
      recursiveReadOnly: Disabled
  hostIP: 10.0.12.13
  hostIPs:
  - ip: 10.0.12.13
  initContainerStatuses:
  - containerID: containerd://a7b9f1084c1aa9a282e4a294e731414296a3649ecb5493021932f7a89daf2507
    image: docker.io/library/mysql:8.0
    imageID: docker.io/library/mysql@sha256:7dcddc01f13bab2f15cde676d44d01f61fc9f99fe7785e86196dfc07d358ae2b
    lastState: {}
    name: db-migrate
    ready: false
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-06-16T14:48:28Z"
    volumeMounts:
    - mountPath: /docker-entrypoint-initdb.d
      name: init-sql
      readOnly: true
      recursiveReadOnly: Disabled
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nzzcc
      readOnly: true
      recursiveReadOnly: Disabled
  phase: Pending
  podIP: 10.0.12.201
  podIPs:
  - ip: 10.0.12.201
  qosClass: BestEffort
  startTime: "2026-06-16T14:48:27Z"
