authz-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: allow-all
  namespace: default

spec: {}
